Fix button groups misaligning at specific window widths

--- a/index.css
+++ b/index.css
@@ -34,3 +34,7 @@ body {
         columns: 3;
     }
 }
+
+#elements .list-group-item {
+    overflow: hidden;
+}
